# KUBERA

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  KUBERA.hpp  README.md  configuration.hpp  iced.hpp  kubera-rework.sln  kubera.sln  kubera.vcxproj  references.txt  sign_extend.hpp  types.hpp  vcpkg.json
cli/: cli.vcxproj
cli-windows-app/: _syscall_host.asm  cli-windows-app.vcxproj  cli-windows-app.vcxproj.filters  main.cpp  mmu.hpp  module_manager.cpp  module_manager.hpp  peb.hpp  process.hpp  process_objects.hpp  syscall_host.hpp  syscalls.cpp  syscalls.hpp  windows.cpp  wintypes.hpp
context/: KUBERA.hpp  context.vcxproj  context.vcxproj.filters  emulator.hpp  iced.hpp  memory.hpp  types.hpp  x86.hpp
context/src/: kubera.cpp  virtual_memory.cpp
dll_minimal/: dll_minimal.cpp  dll_minimal.vcxproj  dll_minimal.vcxproj.filters
emulator/: emulator.vcxproj  emulator.vcxproj.filters
emulator/src/: change.cpp  emulator.cpp  exception.cpp  pch.hpp  sig_scanner.hpp  utilities.cpp
example/: example.cpp  example.vcxproj  main.cpp
exception_tests/: exception_tests.cpp  exception_tests.vcxproj  exception_tests.vcxproj.filters  header.hpp
kubera_tests/: kubera_tests.cpp  kubera_tests.vcxproj  kubera_tests.vcxproj.filters  utils.hpp
logger/: logger.vcxproj
module_loader/: module_loader.cpp  module_loader.vcxproj  module_loader.vcxproj.filters
platform/: platform.hpp  platform.vcxproj  platform.vcxproj.filters  portable_executable.hpp
semantics/: semantics.vcxproj  semantics.vcxproj.filters
shared/: capstone++.hpp  context.hpp  iced.hpp  module_loader.hpp  portable_executable.hpp  shared.vcxproj  shared.vcxproj.filters  types.hpp
src/: kubera.cpp  virtual_memory.cpp
test-app-windows/: test-app-windows.cpp  test-app-windows.vcxproj  test-app-windows.vcxproj.filters
windows-compat-layer/: windows-compat-layer.vcxproj  windows-compat-layer.vcxproj.filters
(+53 files in other folders)
